[package]
name = "jt"
version = "0.9.0"
license = "MIT OR Apache-2.0"
description = "A command line utility for filling out Tempo timesheets"
repository = "https://github.com/keirlawson/jt"
authors = ["Keir Lawson"]
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive", "cargo"] }
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "5.0.1"
env_logger = "0.11.5"
indicatif = "0.17.8"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
toml = "0.8.19"
